# task_rest

./: CMakeLists.txt  main.cpp
DB/: create_db_and_user.sql  create_tables.sql  helpers.sql
interfaces/: ICommand.hpp  IDispatcher.hpp  IEntity.hpp  IServer.hpp
modules/: CMakeLists.txt
modules/Helpers/: CMakeLists.txt  Helper.cpp  Helper.hpp
modules/HttpServer/: CMakeLists.txt  HttpPocoServer.cpp  HttpPocoServer.hpp  PathDispatcher.cpp  PathDispatcher.hpp  RequestHandler.cpp  RequestHandler.hpp  RequestHandlerFactory.cpp  RequestHandlerFactory.hpp
modules/JSON/: CMakeLists.txt  JsonSerializator.cpp  JsonSerializator.hpp
modules/PostgreSQL/: CMakeLists.txt  PGConnection.cpp  PGConnection.hpp  PGSubtask.cpp  PGSubtask.hpp  PGTask.cpp  PGTask.hpp
tests/: CMakeLists.txt  CMakeLists.txt.in
tests/Curl/: CurlUsage.txt  addSubtask.json  addTask.json  updateSubtask.json  updateTask.json
tests/HttpServer/: CMakeLists.txt  TestDispatcher.cpp  TestHttpListener.cpp
tests/JSON/: CMakeLists.txt  TestJSON.cpp
tests/PostgreSQL/: CMakeLists.txt  TestPostgresOperations.cpp
